# serializer version: 1
# name: test_as_ok[pipe_as_single]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_as
                ident	table2
  
  '''
# ---
# name: test_pipe_drop_ok[pipe_drop_multi]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_drop
                drop_list
                  drop_item
                    ident	col1
                  drop_item
                    ident	col2
  
  '''
# ---
# name: test_pipe_drop_ok[pipe_drop_single]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_drop
                drop_list
                  drop_item
                    ident	col1
  
  '''
# ---
# name: test_pipe_drop_ok[pipe_drop_single_trailing_comma]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_drop
                drop_list
                  drop_item
                    ident	col1
  
  '''
# ---
# name: test_pipe_extend_ok[pipe_extend_multi]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_extend
                extend_list
                  extend_item
                    column_expr
                      bigquery__function_call_expr
                        column_expr
                          ident	POW
                        bigquery__function_args
                          bigquery__pos_arg
                            column_expr
                              ident	col1
                          bigquery__pos_arg
                            column_expr
                              bigquery__literal
                                bigquery__integer_literal	2
                    as_alias
                      ident	col2
                  extend_item
                    column_expr
                      bigquery__function_call_expr
                        column_expr
                          ident	EXP
                        bigquery__function_args
                          bigquery__pos_arg
                            column_expr
                              ident	col1
                          bigquery__pos_arg
                            column_expr
                              bigquery__literal
                                bigquery__integer_literal	2
  
  '''
# ---
# name: test_pipe_extend_ok[pipe_extend_single]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_extend
                extend_list
                  extend_item
                    column_expr
                      bigquery__function_call_expr
                        column_expr
                          ident	POW
                        bigquery__function_args
                          bigquery__pos_arg
                            column_expr
                              ident	col1
                          bigquery__pos_arg
                            column_expr
                              bigquery__literal
                                bigquery__integer_literal	2
  
  '''
# ---
# name: test_pipe_extend_ok[pipe_extend_single_alias]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_extend
                extend_list
                  extend_item
                    column_expr
                      bigquery__function_call_expr
                        column_expr
                          ident	POW
                        bigquery__function_args
                          bigquery__pos_arg
                            column_expr
                              ident	col1
                          bigquery__pos_arg
                            column_expr
                              bigquery__literal
                                bigquery__integer_literal	2
                    as_alias
                      ident	col2
  
  '''
# ---
# name: test_pipe_extend_ok[pipe_extend_single_trailing_comma]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_extend
                extend_list
                  extend_item
                    column_expr
                      bigquery__function_call_expr
                        column_expr
                          ident	POW
                        bigquery__function_args
                          bigquery__pos_arg
                            column_expr
                              ident	col1
                          bigquery__pos_arg
                            column_expr
                              bigquery__literal
                                bigquery__integer_literal	2
  
  '''
# ---
# name: test_pipe_ok[pipe_from]
  '''
  start
    query_statement
      query_expr
        pipe_from
          from_clause
            bigquery__from_item_table
              bigquery__path_expression
                ident	table1
  
  '''
# ---
# name: test_pipe_ok[pipe_from_select]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_select
                select_list
                  bigquery__select_item
                    bigquery__select_expr
                      column_expr
                        ident	col1
  
  '''
# ---
# name: test_pipe_ok[pipe_select_select]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            select
              select_list
                bigquery__select_item
                  bigquery__select_expr
                    column_expr
                      ident	col1
              bigquery__select_from
                from_clause
                  bigquery__from_item_table
                    bigquery__path_expression
                      ident	table1
          pipe_item
            pipe_operator
              pipe_select
                select_list
                  bigquery__select_item
                    bigquery__select_expr
                      column_expr
                        ident	col1
  
  '''
# ---
# name: test_pipe_ok[pipe_subquery_select]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            subquery
              query_expr
                select
                  select_list
                    bigquery__select_item
                      bigquery__select_expr
                        column_expr
                          ident	col1
                  bigquery__select_from
                    from_clause
                      bigquery__from_item_table
                        bigquery__path_expression
                          ident	table1
          pipe_item
            pipe_operator
              pipe_select
                select_list
                  bigquery__select_item
                    bigquery__select_expr
                      column_expr
                        ident	col1
  
  '''
# ---
# name: test_pipe_rename_ok[pipe_rename_multi]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_rename
                rename_list
                  rename_item
                    ident	col1
                    as_alias
                      ident	col2
                  rename_item
                    ident	col3
                    as_alias
                      ident	col4
  
  '''
# ---
# name: test_pipe_rename_ok[pipe_rename_single]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_rename
                rename_list
                  rename_item
                    ident	col1
                    as_alias
                      ident	col2
  
  '''
# ---
# name: test_pipe_rename_ok[pipe_rename_single_trailing_comma]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_rename
                rename_list
                  rename_item
                    ident	col1
                    as_alias
                      ident	col2
  
  '''
# ---
# name: test_pipe_set_ok[pipe_set_multi]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_set
                set_list
                  set_item
                    ident	col1
                    column_expr
                      bigquery__function_call_expr
                        column_expr
                          ident	POW
                        bigquery__function_args
                          bigquery__pos_arg
                            column_expr
                              ident	col1
                          bigquery__pos_arg
                            column_expr
                              bigquery__literal
                                bigquery__integer_literal	2
                  set_item
                    ident	col2
                    column_expr
                      bigquery__function_call_expr
                        column_expr
                          ident	EXP
                        bigquery__function_args
                          bigquery__pos_arg
                            column_expr
                              ident	col1
                          bigquery__pos_arg
                            column_expr
                              bigquery__literal
                                bigquery__integer_literal	2
  
  '''
# ---
# name: test_pipe_set_ok[pipe_set_single]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_set
                set_list
                  set_item
                    ident	col1
                    column_expr
                      bigquery__function_call_expr
                        column_expr
                          ident	POW
                        bigquery__function_args
                          bigquery__pos_arg
                            column_expr
                              ident	col1
                          bigquery__pos_arg
                            column_expr
                              bigquery__literal
                                bigquery__integer_literal	2
  
  '''
# ---
# name: test_pipe_set_ok[pipe_set_single_trailing_comma]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_set
                set_list
                  set_item
                    ident	col1
                    column_expr
                      bigquery__function_call_expr
                        column_expr
                          ident	POW
                        bigquery__function_args
                          bigquery__pos_arg
                            column_expr
                              ident	col1
                          bigquery__pos_arg
                            column_expr
                              bigquery__literal
                                bigquery__integer_literal	2
  
  '''
# ---
